// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies permission template 1`] = `
<ApplyTemplate
  onClose={[Function]}
  organization="org"
  project={
    Object {
      "id": "",
      "key": "project",
      "name": "Project",
      "organization": "org",
      "qualifier": "TRK",
      "visibility": "private",
    }
  }
/>
`;

exports[`restores access 1`] = `
<Fragment>
  <ActionsDropdown
    onOpen={[Function]}
  >
    <ActionsDropdownItem
      className="js-apply-template"
      onClick={[Function]}
    >
      projects_role.apply_template
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`restores access 2`] = `
<Fragment>
  <ActionsDropdown
    onOpen={[Function]}
  >
    <ActionsDropdownItem
      className="js-restore-access"
      onClick={[Function]}
    >
      global_permissions.restore_access
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-apply-template"
      onClick={[Function]}
    >
      projects_role.apply_template
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`restores access 3`] = `
<Fragment>
  <ActionsDropdown
    onOpen={[Function]}
  >
    <ActionsDropdownItem
      className="js-restore-access"
      onClick={[Function]}
    >
      global_permissions.restore_access
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="js-apply-template"
      onClick={[Function]}
    >
      projects_role.apply_template
    </ActionsDropdownItem>
  </ActionsDropdown>
  <RestoreAccessModal
    currentUser={
      Object {
        "login": "admin",
      }
    }
    onClose={[Function]}
    onRestoreAccess={[Function]}
    project={
      Object {
        "id": "",
        "key": "project",
        "name": "Project",
        "organization": "org",
        "qualifier": "TRK",
        "visibility": "private",
      }
    }
  />
</Fragment>
`;
